--- a/index.html
+++ b/index.html
@@ -857,7 +857,7 @@
             document.querySelector(`.tab-button[onclick*='${tabId}']`).classList.add('active');
         }
 // Load FAQs from faqs.json
-let faqData = [];
+/*let faqData = [];
 
 async function loadFaqs() {
     try {
@@ -906,7 +906,7 @@ searchInput.addEventListener('input', function () {
 });
 
 // Load FAQs on page load
-loadFaqs();
+loadFaqs();*/
         
 
         // Initial setup and calculation on load
